--- a/Week-3/AssignmentSubmission/package.json
+++ b/Week-3/AssignmentSubmission/package.json
@@ -9,10 +9,9 @@
   "author": "Rwitesh Bera",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
-    "formidable": "^1.2.2",
-    "mongoose": "^6.0.6"
+    "mongoose": "^6.0.6",
+    "multer": "^1.4.3"
   }
 }
