--- a/Week-3/AssignmentSubmission/package.json
+++ b/Week-3/AssignmentSubmission/package.json
@@ -1,10 +1,11 @@
 {
   "name": "assignmentsubmission",
   "version": "1.0.0",
-  "description": "Assignment Submission App",
+  "description": "Assignment Submission App - Developer Days",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
   "author": "Rwitesh Bera",
   "license": "ISC",
